crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__call_action_flows_interface_to_result.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"s > /o > i > call Add > Result          "
"┌i.Add─────────────────────────────────┐"
"│42                                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc bac"
