crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__call_detail_aligns_arg_labels.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 8)"
---
"s > /o > i > call Move                  "
"┌call i.Move───────────────────────────┐"
"│▶ count  u  3▏                        │"
"│  name   s  x                         │"
"│                                      │"
"│               [Trigger]              │"
"└──────────────────────────────────────┘"
"Tab move · Enter trigger · c copy-as · E"
