crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__call_detail_form_renders_field_and_trigger.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 8)"
---
"s > /o > i > call Add                   "
"┌call i.Add────────────────────────────┐"
"│▶ n  u  42▏                           │"
"│                                      │"
"│                                      │"
"│               [Trigger]              │"
"└──────────────────────────────────────┘"
"Tab move · Enter trigger · c copy-as · E"
