crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__call_result_renders_reply_value.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 40, 8)"
---
"Result                                  "
"┌i.Add─────────────────────────────────┐"
"│49                                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc bac"
