crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__copy_as_capstone_loop_closes_popup_over_result.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"s > /o > i > call Add > Result                          "
"┌i.Add─────────────────────────────────────────────────┐"
"│42                                                    │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"│                                                      │"
"└──────────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back · q quit · ? h"
