crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__drill_down_auto_skips_service_to_interface.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"org.busx.Test > / > org.busx.Test                           "
"┌▶ methods────────────────────────────────┐┌actions────────┐"
"│Ping                                     ││Call           │"
"│                                         ││Listen         │"
"│                                         ││               │"
"└─────────────────────────────────────────┘│               │"
"┌properties (loading…)────────────────────┐│               │"
"│Name  s                                  ││               │"
"│                                         ││               │"
"└─────────────────────────────────────────┘│               │"
"┌signals──────────────────────────────────┐│               │"
"│                                         ││               │"
"│                                         ││               │"
"│                                         ││               │"
"└─────────────────────────────────────────┘└───────────────┘"
"Tab column · ↑↓ select · Enter open · r refresh · Esc back ·"
