crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__filter_works_on_objects_screen.snap
---
source: tests/tui.rs
assertion_line: 379
expression: "render_to_string(&state, 40, 7)"
---
"org.busx.Test                           "
"┌Objects───────────────────────────────┐"
"│/org/a                                │"
"│/org/b                                │"
"└──────────────────────────────────────┘"
"/ org                                   "
"↑↓ select · Enter open · / filter · Esc "
