crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__help_overlay_renders_over_screen.snap
---
source: tests/tui.rs
assertion_line: 2914
expression: "render_to_string(&state, 60, 16)"
---
"                                                            "
"┌Services──────────────────────────────────────────────────┐"
"│org.busx┌help — Esc or ? to close────────────────┐        │"
"│        │busx — keybindings                      │        │"
"│        │                                        │        │"
"│        │global:                                 │        │"
"│        │  ↑↓ / jk     move selection (or scroll │        │"
"│        │on the Result screen)                   │        │"
"│        │  Enter       open / activate / drill in│        │"
"│        │/ fire the focused button               │        │"
"│        │  Esc         back (or stop a listen);  │        │"
"│        │at the root Service screen, quit        │        │"
"│        └────────────────────────────────────────┘        │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q quit · ? help         "
