crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__interface_renders_action_button_bar.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 64, 16)"
---
"org.busx.Test > /org/busx/Test > org.busx.Test                  "
"┌methods─────────────────────────────────────┐┌▶ actions───────┐"
"│Ping                                        ││Call            │"
"│Echo  ss                                    ││Listen          │"
"│                                            ││                │"
"└────────────────────────────────────────────┘│                │"
"┌properties──────────────────────────────────┐│                │"
"│Name  s                                     ││                │"
"│                                            ││                │"
"└────────────────────────────────────────────┘│                │"
"┌signals─────────────────────────────────────┐│                │"
"│                                            ││                │"
"│                                            ││                │"
"│                                            ││                │"
"└────────────────────────────────────────────┘└────────────────┘"
"Tab column · ↑↓ select · Enter open · r refresh · Esc back · q q"
