crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__interface_screen_shows_getall_error_scoped_to_properties.snap
---
source: tests/tui.rs
expression: rendered
---
"s > /o > i                                                      "
"┌▶ methods───────────────────────────────────┐┌actions─────────┐"
"│m1  u                                       ││Call            │"
"│m2                                          ││Listen          │"
"│                                            ││                │"
"└────────────────────────────────────────────┘│                │"
"┌properties (unavailable)────────────────────┐│                │"
"│org.freedesktop.DBus.Error.InvalidArgs: 无此││                │" Hidden by multi-width symbols: [(42, " "), (44, " ")]
"│                                            ││                │"
"└────────────────────────────────────────────┘│                │"
"┌signals─────────────────────────────────────┐│                │"
"│sig1  u                                     ││                │"
"│                                            ││                │"
"│                                            ││                │"
"└────────────────────────────────────────────┘└────────────────┘"
"Tab column · ↑↓ select · Enter open · r refresh · Esc back · q q"
