crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__interfaces_screen_lists_interfaces.snap
---
source: tests/tui.rs
assertion_line: 598
expression: "render_to_string(&state, 44, 7)"
---
"org.busx.Test > /org/busx/Test              "
"┌Interfaces────────────────────────────────┐"
"│org.busx.Test                             │"
"│                                          │"
"│                                          │"
"└──────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · Esc back"
